--- a/posts/1.md
+++ b/posts/1.md
@@ -1,15 +1,15 @@
 ---
 layout: post-layout.njk 
-title: Creating a Blog With 11ty
+title: Creating a Blog with 11ty
 date: 2021-03-18
 tags: ['post']
 ---
 <!-- Excerpt Start -->
 This is my first post! I wanted to share my experience building this site with 11ty and Nunjucks.
 <!-- Excerpt End --> 
-Welcome to my blog and personal site! I hope some of the words I write here might be interesting or useful to someone one day. I have had the desire to build a small personal page like this for a while - it's basically a right of passage for people who write code for a living. 
+Welcome to my blog and personal site! I hope some of the words I write here might be interesting or useful to someone one day. I have had the desire to build a small personal page like this for a while - it's basically a rite of passage for people who write code for a living. 
 
-What finally pushed me to create this site was that I was hearing a lot about the JAMstack and Netlify and it seemed interesting to me. If you don't know, JAMstack is less of a technology stack and more of a philosophy about building static sites that are served to clients and don't need to communicate with a backend. Any dynamic content is assembled when the site is generated, or retrieved by public APIs on the client's side. This is nice because it means your site is fast, and the cost to host it is very small (or free in the case of Netlify). 
+What finally pushed me to create this site was that I was hearing a lot about the JAMstack and Netlify and it seemed interesting to me. If you don't know, JAMstack is less of a technology stack and more of a philosophy about building static sites that are served to clients and don't need to communicate with a back-end. Any dynamic content is assembled when the site is generated, or retrieved by public APIs on the client's side. This is nice because it means your site is fast, and the cost to host it is very small (or free in the case of Netlify). 
 
 While this website is not _really_ a stellar example of the JAMstack since it doesn't make use of any  public APIs (yet), it was still a good opportunity to dip my toes into some popular JAMstack technologies. That's where [11ty](11ty.dev) comes in. 11ty is a static site generator, which means it can transform a bunch of templates and Markdown files into HTML that you can serve as a static site. I don't really have any experience with other SSG's, but 11ty is apparently all the rage these days so this was a good chance to try it out . Along with 11ty I used the [Nunjucks](https://mozilla.github.io/nunjucks/) templating language from Mozilla to create templates for the different kinds of pages on this site. Then 11ty takes my Markdown and turns it into blog posts - sweet!
 
@@ -35,7 +35,7 @@ The structure of this project is pretty simple:
 ├── posts
     └── *.md
 ```
-I'll provide a high level explanation of each top level file and directory. Check out the repo for more details.
+I'll provide a high level explanation of each top-level file and directory. Check out the repo for more details.
 
 - **blog.njk**
 : Nunjucks template file that describes the `/blog` page. It enumerates over the collection of posts and creates a listing for each one with a date and excerpt. 
