Add favicon and some styling

--- a/posts/1.md
+++ b/posts/1.md
@@ -26,7 +26,7 @@ The structure of this project is pretty simple:
 ```
 ├── blog.njk
 ├── .eleventy.js
-├── img/
+├── static/
 ├── _includes/
 │   ├── base-layout.njk
 │   ├── index-layout.njk
@@ -40,8 +40,8 @@ I'll provide a high level explanation of each top-level file and directory. Chec
 - **blog.njk**
 : Nunjucks template file that describes the `/blog` page. It enumerates over the collection of posts and creates a listing for each one with a date and excerpt. 
 
-- **img/**
-: Images resources.
+- **static/**
+: Resources directory.
 
 - **_includes/**
 : Template files for the homepage and blog page, and a base template with some HTML boilerplate. This folder tells 11ty to include these templates in the build but not build pages from them. 
