Update Blog “2021-03-24-test-post”

--- a/posts/2021-03-24-test-post.md
+++ b/posts/2021-03-24-test-post.md
@@ -4,7 +4,9 @@ tags: post
 title: Test Post!!!!
 date: 2021-03-24T01:58:52.332Z
 ---
-
+<!-- Excerpt Start -->
+From Cheech
+<!-- Excerpt End -->
 
 Hello World
 
